tests/compile_fail/delegate-struct.rs
use delegate_attr::delegate;

#[delegate(x)]
struct Foo(Vec<u8>);

fn main() {}
