tests/compile_fail/delegate-struct.stderr
error: expected an impl block or method inside impl block
 --> $DIR/delegate-struct.rs:4:1
  |
4 | struct Foo(Vec<u8>);
  | ^^^^^^
